# bevy_dev_console

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
doc/: .console.png-autosave.kra
examples/: basic.rs  custom_functions.rs  resource.rs
src/: builtin_parser.rs  command.rs  config.rs  lib.rs  logging.rs  parser.rs  prelude.rs  ui.rs
src/builtin_parser/: completions.rs  lexer.rs  number.rs  parser.rs  runner.rs
src/builtin_parser/runner/: environment.rs  error.rs  member.rs  reflection.rs  stdlib.rs  unique_rc.rs  value.rs
src/builtin_parser/runner/stdlib/: math.rs
src/command/: lexer.rs  parser.rs  runner.rs
src/command/runner/: environment.rs  stdlib.rs  value.rs
src/logging/: android_tracing.rs  log_plugin.rs
src/parser/: lexer.rs  parser.rs  runner.rs
src/parser/runner/: environment.rs  stdlib.rs
src/ui/: completions.rs
