
[package]
name = "bevy_dev_console"
version = "0.1.0"
edition = "2021"
exclude = ["assets/", "docs/", ".github/"]
keywords = ["bevy", "console", "development", "source"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["builtin-parser"]

builtin-parser = ["dep:logos"]

[dependencies]
# This crate by itself doesn't use any bevy features, but `bevy_egui` (dep) uses "bevy_asset".
bevy = { version = "0.12.1", default-features = false, features = [] }
bevy_egui = "0.24.0"
chrono = "0.4.31"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
web-time = "1.0.0"

# builtin-parser features
logos = { version = "0.13.0", optional = true }

[dev-dependencies]
bevy = "0.12.1"


[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[lints]
clippy.useless_format = "allow"
rust.missing_docs = "warn"
