
[package]
name = "bevy_dev_console"
version = "0.1.0"
edition = "2021"
exclude = ["assets/", "docs/", ".github/"]
keywords = ["bevy", "console", "development", "source"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["builtin-parser", "completions", "builtin-parser-completions"]

completions = []

builtin-parser-completions = [
    "completions",
    "builtin-parser",
    "dep:fuzzy-matcher",
]

builtin-parser = ["dep:logos"]

[dependencies]
# This crate by itself doesn't use any bevy features, but `bevy_egui` (dep) uses "bevy_asset".
bevy = { version = "0.14.0", default-features = false, features = [] }
bevy_egui = "0.28.0"
chrono = "0.4.31"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
web-time = "1.0.0"

# builtin-parser features
logos = { version = "0.14.0", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }

[dev-dependencies]
bevy = "0.14.0"

[lints]
clippy.useless_format = "allow"
rust.missing_docs = "warn"
